<resources>
    <string name="app_name">Storage Browser</string>
    <string name="action_settings">Settings</string>

    <string name="lbl_storage_access_framework">Storage Access Framework</string>
    <string name="lbl_na">-</string>
    <string name="lbl_no_data">No files here</string>
    <string name="lbl_refresh">Refresh</string>
    <string name="lbl_copying">Copying</string>
    <string name="lbl_new_dir">New directory</string>
    <string name="lbl_default_new_dir">New Directory</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_all_storage">Home</string>
    <string name="lbl_add_saf">Add Storage Access</string>
    <string name="lbl_add_local_storage">Add Internal Storage</string>
    <string name="lbl_local_storage">Internal Storage</string>
    <string name="lbl_internal_storage">Device Storage</string>
    <string name="lbl_deleting">Deleting</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_required">Required</string>

    <string name="lbl_shared_storage">Device shared storage</string>
    <string name="lbl_advanced_location">Arbitrary path (advanced)</string>
    <string name="lbl_any_dir_hint">absolute path</string>

    <string name="lbl_info">Info</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_display_name">Display Name</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_size">Size</string>
    <string name="lbl_type">Type</string>

    <string name="lbl_bytes">Bytes</string>
    <string name="lbl_kb">KB</string>
    <string name="lbl_mb">MB</string>

    <string name="lbl_view">Open</string>
    <string name="lbl_view_as">Open As</string>
    <string name="lbl_share">Share</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_rename">Rename</string>
    <string name="lbl_remove_from_list">Remove from list</string>
    <string name="lbl_copy_to">Copy to</string>
    <string name="lbl_copy_from">Copy from</string>
    <string name="lbl_home">Home</string>

    <string name="lbl_text">Text</string>
    <string name="lbl_image">Image</string>
    <string name="lbl_audio">Audio</string>
    <string name="lbl_video">Video</string>

    <string name="msg_no_app">No app to handle this file</string>
    <string name="msg_no_picker">No picker installed</string>

    <string name="msg_can_not_create_dir">Create new directory not yet supported</string>
    <string name="msg_copy_done">Copy file done</string>
    <string name="msg_copy_failed">Copy file failed</string>
    <string name="msg_not_applicable_here">Not applicable on this location</string>
    <string name="msg_no_name">No name given</string>
    <string name="msg_create_dir_ok">Directory created</string>
    <string name="msg_create_dir_failed">Can not create directory</string>
    <string name="msg_confirm_delete">Are you sure want to delete this file?</string>
    <string name="msg_delete_ok">Deleted</string>
    <string name="msg_delete_failed">Can not delete this file</string>
    <string name="msg_rename_ok">Renamed</string>
    <string name="msg_rename_failed">Can not rename this file</string>
    <string name="msg_please_wait">Please wait</string>
    <string name="msg_location_does_not_exist">Location does not exist</string>
    <string name="msg_add_root">Add new storage from menu to start browsing</string>
    <string name="msg_please_grant_permission">Please grant permission</string>
    <string name="msg_any_dir_warning">Some location might be read-only or inaccessible. If you want to modify your SD Card please add storage access instead.</string>

</resources>
