<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_view"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/lbl_view"/>

    <item
        android:id="@+id/action_share"
        app:showAsAction="never"
        android:orderInCategory="200"
        android:title="@string/lbl_share"/>

    <item
        android:id="@+id/action_copy_to"
        app:showAsAction="never"
        android:orderInCategory="300"
        android:title="@string/lbl_copy_to"/>

    <item
        android:id="@+id/action_rename"
        app:showAsAction="never"
        android:orderInCategory="400"
        android:title="@string/lbl_rename"/>

    <item
        android:id="@+id/action_delete"
        app:showAsAction="never"
        android:orderInCategory="500"
        android:title="@string/lbl_delete"/>

    <item
        android:id="@+id/action_info"
        app:showAsAction="never"
        android:orderInCategory="1000"
        android:title="@string/lbl_info"/>

</menu>
