<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/refresh"
        android:title="@string/lbl_refresh"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"/>

    <item
        android:id="@+id/create_dir"
        android:title="@string/lbl_new_dir"
        android:orderInCategory="200"
        app:showAsAction="never"/>

    <item
        android:id="@+id/copy_from"
        android:title="@string/lbl_copy_from"
        android:orderInCategory="300"
        app:showAsAction="never"/>

    <item
        android:id="@+id/goto_home"
        android:title="@string/lbl_home"
        android:orderInCategory="500"
        app:showAsAction="never"/>

</menu>
