<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_medium">

        <TextView
            style="@style/LabelText"
            android:text="@string/lbl_name"/>

        <EditText
            style="@style/InfoText"
            android:id="@+id/name_view"/>

        <TextView
            style="@style/LabelText"
            android:text="@string/lbl_size"/>

        <EditText
            style="@style/InfoText"
            android:id="@+id/size_view"/>

        <TextView
            style="@style/LabelText"
            android:text="@string/lbl_type"/>

        <EditText
            style="@style/InfoText"
            android:id="@+id/type_view"/>

        <TextView
            style="@style/LabelText"
            android:text="@string/lbl_location"/>

        <EditText
            style="@style/InfoText"
            android:id="@+id/location_view"/>

    </LinearLayout>
</ScrollView>